fix: dark mode problem solve

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -5,12 +5,7 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+
 
 body {
   background: var(--background);
